INLA writing in Chapter 6

--- a/03-bayesian.Rmd
+++ b/03-bayesian.Rmd
@@ -177,7 +177,7 @@ In "The Design of Experiments" @fisher1936design observed that neighbouring crop
 This law can be formalised using spatial covariance functions.
 Spatial covariance functions are called isotropic when they apply equally in all directions, and stationary when they are invariant over space.
 
-    As well as space, an Tobler's first law applies to time.
+    As well as space, Tobler's first law applies to time.
     Observations made close together in time tend to be similar.
     Temporal covariance structures are often periodic.
 
@@ -269,7 +269,8 @@ Figure \@ref(fig:hierarchical-structure) illustrates a case in which each indivi
 Observations from the same individual are more likely to be similar than observations of different individuals.
 Groups can also be nested within other groups, as well as crossed with each other.
 
-Consider three models for this data, each of which with a Gaussian likelihood:
+Consider three models for this data.
+In each case, the observations are assumed to be Gaussian.
 
 1. **Complete pooling**:
 In the complete pooling model, group structure is ignored and all observations are treated as IID
@@ -375,7 +376,7 @@ Population-based HIV Impact Assessment (PHIA) surveys are funded by PEPFAR and r
 
 Consider a population of individuals $i = 1, \ldots, N$ with outcomes of interest $y_i$.
 A census is a type of survey where all individuals are selected.
-Supposing responses from all individuals were recorded, then any population means can be calculated directly.
+Supposing responses from all individuals were recorded, then all population quantities can be calculated directly.
 For example, if $G_i = G(y_i)$ then the population mean of $G$ is
 \begin{equation}
 \bar G = \frac{1}{N} \sum_{i = 1}^N G(y_i).
