--- a/references.bib
+++ b/references.bib
@@ -1875,3 +1875,19 @@ doi = {10.1201/9781420072884-c30}
   year={2023}
 }
 
+@article{van2023new,
+  title={A new avenue for Bayesian inference with INLA},
+  author={Van Niekerk, Janet and Krainski, Elias and Rustand, Denis and Rue, H{\aa}vard},
+  journal={Computational Statistics \& Data Analysis},
+  volume={181},
+  pages={107692},
+  year={2023},
+  publisher={Elsevier}
+}
+
+@book{press2007numerical,
+  title={Numerical recipes 3rd edition: The art of scientific computing},
+  author={Press, William H and Teukolsky Saul A and Vetterling, William T and Flannery, Brian P},
+  year={2007},
+  publisher={Cambridge university press}
+}
